--- a/homeo-client/src/App.css
+++ b/homeo-client/src/App.css
@@ -2,10 +2,15 @@
   text-align: center;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
 }
 
-li a {
+a {
   text-decoration: none;
 }
